[package]
name = "stx_test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
humantime = "2.1.0"
base64 = "0.21.2"
hmac-sha256 = "1.1.6"
hex = "0.4.3"
help = "0.0.0"
serde = { version = "1.0.163", features = ["derive"] }

[[bin]]
name = "get_balance"
path = "get_balance/main.rs"

[[bin]]
name = "withdrawal_of_tokens"
path = "withdrawal_of_tokens/main.rs"

[[bin]]
name = "check_n_transfer"
path = "check_n_transfer/main.rs"
