[package]
name = "get_post_okcoin"
version = "0.1.0"
edition = "2021"
authors = ["Mike AntonovMA@outlook.com"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
humantime = "2.1.0"
base64 = "0.21.2"
hmac-sha256 = "1.1.6"
hex = "0.4.3"
help = "0.0.0"
serde = { version = "1.0.163", features = ["derive"] }
mockito = "1.0.2"
thiserror = "1.0.40"
async-trait = "0.1.68"
