[package]
name = "get_post_okcoin"
version = "0.1.0"
edition = "2021"
authors = ["Mike AntonovMA@outlook.com"]

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
base64 = "0.21.2"
clap = { version = "4.3.5", features = ["derive"] }
env_logger = "0.10.0"
help = "0.0.0"
hex = "0.4.3"
hmac-sha256 = "1.1.6"
humantime = "2.1.0"
humantime-serde = "1.1.1"
log = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
toml = "0.7.4"
